--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,4 +108,8 @@
     </string>
     <string name="action_settings">Settings</string>
     <string name="menu_search">Search 123</string>
+    <string name="title_activity_main1">Main1Activity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
